--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ bld/
 msbuild.log
 msbuild.err
 msbuild.wr
+EasyNutrition.API/.vs/EasyNutrition.API/v16/.suo
+EasyNutrition.API/EasyNutrition.API/bin/Debug/netcoreapp3.1/EasyNutrition.API.dll
+EasyNutrition.API/EasyNutrition.API/bin/Debug/netcoreapp3.1/EasyNutrition.API.pdb
+EasyNutrition.API/EasyNutrition.API/obj/Debug/netcoreapp3.1/EasyNutrition.API.dll
+EasyNutrition.API/EasyNutrition.API/obj/Debug/netcoreapp3.1/EasyNutrition.API.pdb
